--- a/sourse/styles/blok.css
+++ b/sourse/styles/blok.css
@@ -1,86 +1,121 @@
-/*.dc {
+.blogo {
     border-left: 0px;
     border-right: 0px;
     border-top: 0px;
-    border-bottom: 1px;
+    border-bottom: 2px;
     border-color: black;
     border-style: solid;
 }
 
-.pv {
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 1px;
-    border-bottom: 1px;
-    border-color: black;
-    border-style: solid;
-}
-
-.ut {
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 1px;
-    border-bottom: 0px;
-    border-color: black;
-    border-style: solid;
-}
-
-.lbl {
-    border-left: 0px;
+.bnav {
+    border-left: 2px;
     border-right: 1px;
-    border-top: 0px;
-    border-bottom: 0px;
-    border-color: black;
-    border-style: solid;
-}
-
-.rbl {
-    border-left: 1px;
-    border-right: 0px;
-    border-top: 0px;
+    border-top: 2px;
     border-bottom: 1px;
     border-color: black;
     border-style: solid;
 }
 
-.tbl {
+.btyninf {
+    border-left: 2px;
+    border-right: 1px;
+    border-top: 1px;
+    border-bottom: 2px;
+    border-color: black;
+    border-style: solid;
+}
+
+.btyn {
     border-left: 1px;
     border-right: 1px;
-    border-top: 0px;
+    border-top: 2px;
     border-bottom: 1px;
     border-color: black;
     border-style: solid;
 }
 
-.libl {
+.binf {
     border-left: 1px;
-    border-right: 0px;
+    border-right: 2px;
+    border-top: 2px;
+    border-bottom: 1px;
+    border-color: black;
+    border-style: solid;
+}
+
+.bplaer {
+    border-left: 1px;
+    border-right: 2px;
+    border-top: 1px;
+    border-bottom: 2px;
+    border-color: black;
+    border-style: solid;
+}
+
+.bcol {
+        border-left: 1px;
+    border-right: 2px;
+    border-top: 2px;
+    border-bottom: 1px;
+    border-color: black;
+    border-style: solid;
+}
+
+.bisp {
+            border-left: 1px;
+    border-right: 2px;
     border-top: 1px;
     border-bottom: 1px;
     border-color: black;
     border-style: solid;
 }
 
-.tibl {
-    border-left: 1px;
-    border-right: 0px;
-    border-top: 1px;
-    border-bottom: 0px;
+.bai {
+            border-left: 1px;
+    border-right: 1px;
+    border-top: 2px;
+    border-bottom: 1px;
     border-color: black;
     border-style: solid;
 }
-*/
+
+.btynai {
+            border-left: 1px;
+    border-right: 2px;
+    border-top: 2px;
+    border-bottom: 1px;
+    border-color: black;
+    border-style: solid;
+}
+
+.bpv {
+                border-left: 1px;
+    border-right: 2px;
+    border-top: 1px;
+    border-bottom: 1px;
+    border-color: black;
+    border-style: solid;
+}
+
+.ar11 {
+    aspect-ratio: 1 / 1;
+}
+
 .logo {
     height: 14%;
     align-content: center;
 }
 
 .panel {
-    height: 86%;
+    height: 88%;
 }
 
 .lbtext {
     height: 18%;
+    align-content: center;
+}
+
+.ac {
     align-content: center;
 }
 
@@ -101,10 +136,32 @@
     height: 25%;
 }
 
+.Dereimg {
+    width: 90%;
+    height: 90%;
+}
+
+.hh4 {
+    font-size: 1rem;
+}
+
+.hh3 {
+    font-size: 2rem;
+}
+
+.hh2 {
+    font-size: 3rem;
+}
+
+.hh1 {
+    font-size: 4rem;
+}
+
 
 .icon {
     width: 100%;
 }
+
 .iimg {
     width: 100%;
     height: 100%;
@@ -116,6 +173,28 @@
 }
 
 .min-icon {
-height: 100px;
+    height: 100px;
 }
 
+.name {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 7%;
+    align-content: center
+}
+
+.col-isp {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 93%;
+}
+
+.ai {
+    height: 88%;
+}
+
+.pv {
+    height: 12%;
+}
